# Drone-Simulator

./: CMakeLists.txt  README.md  build.bat  main.py  terrain.py
core/: bindings.cpp
core/include/: aerodynamics.hpp  atmosphere.hpp  collision.hpp  controller.hpp  drone_physics.hpp  math_types.hpp  motor_dynamics.hpp  noise.hpp  sensors.hpp  simd_math.hpp  thread_pool.hpp  turbulence.hpp
